2007-12-04  Stefan Kost  <ensonic@users.sf.net>

	* tests/gobject/src/giface.c:
	* tests/gobject/src/gobject.c:
	  Little test cleanup. The bug was already fixed.

2007-12-04  Stefan Kost  <ensonic@users.sf.net>

	* tests/gobject/docs/tester-sections.txt:
	* tests/gobject/docs/tester.types:
	* tests/gobject/src/Makefile.am:
	* tests/gobject/src/giface.c:
	* tests/gobject/src/giface.h:
	* tests/gobject/src/gobject.c:
	* tests/gobject/src/gobject.h:
	* tests/gobject/src/tester.c:
	* tests/gobject/src/tester.h:
	  Refactor tests for #489279.

2007-12-04  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-common.pl.in:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.h:
	  Add testcase for #501038. Improve struct parsing to correctly finish
	  if the last line in struct declaration was a preprocessor statement.
	  Fixes  #501038.

2007-12-04  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtkdoc-common.pl.in:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.c:
	* tests/bugs/src/tester.h:
	  Handle forward typedef'd enums. Fixes #446648.

2007-12-02  Loïc Minier  <lool@dooz.org>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Add double-quotes around `which gtkdoc-rebase` to prevent "test"
	  from failing with "/bin/sh: line 11: test: !=: unary operator
	  expected ".  Fixes #501066.

2007-11-11  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtk-doc.xsl:
	* gtkdoc-mkdb.in:
	  Avoid generated node ids. Fixes #365913.

2007-11-11  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.xsl:
	* gtkdoc-mkdb.in:
	* style.css:
	  Alternative and cleaner footer implementation (unblock #365913).

2007-11-11  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtkdoc-mkdb.in:
	* gtkdoc-scangobj.in:
	  Display proper types for pointer properties. Fixes #468278.

2007-10-31  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in: