@@ -2,6 +2,12 @@
 
 	* tests/gobject/src/giface.c:
 	* tests/gobject/src/gobject.c:
+	  Uhm, unbreak the links in the test docs.
+
+2007-12-04  Stefan Kost  <ensonic@users.sf.net>
+
+	* tests/gobject/src/giface.c:
+	* tests/gobject/src/gobject.c:
 	  Little test cleanup. The bug was already fixed.
 
 2007-12-04  Stefan Kost  <ensonic@users.sf.net>
